[gd_scene load_steps=8 format=3 uid="uid://ds33rw7k08ig1"]

[ext_resource type="Script" uid="uid://bof6y5qhbnwh0" path="res://Resource/Levels/background_assets/third_grass_grow.gd" id="1_hrfkn"]
[ext_resource type="Texture2D" uid="uid://d17d4ngwqf0r" path="res://Resource/Levels/background_assets/grass_layer.png" id="3_hrfkn"]
[ext_resource type="Texture2D" uid="uid://b778pkle1e6gk" path="res://Resource/Levels/background_assets/grass_layer_3_only.png" id="3_qfl0h"]
[ext_resource type="PackedScene" uid="uid://caqn53bqacbg3" path="res://Resource/Levels/background_assets/grass_roll.tscn" id="4_wai44"]

[sub_resource type="Animation" id="Animation_qs6ww"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("grass_roll:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-13, -167)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("grass_roll2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-13, -167)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1520, -515)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/GrassLayer1Only:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2233, 503)]
}

[sub_resource type="Animation" id="Animation_77enr"]
resource_name = "play"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("grass_roll:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(3.06, -330), Vector2(1435.02, -330)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("grass_roll2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 310), Vector2(1431.97, 310)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1520, -515), Vector2(-84, -515)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/GrassLayer1Only:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2233, 503), Vector2(797, 503)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qs6ww"]
_data = {
&"RESET": SubResource("Animation_qs6ww"),
&"play": SubResource("Animation_77enr")
}

[node name="full_grass" type="Node2D"]
position = Vector2(71, 296)
script = ExtResource("1_hrfkn")

[node name="start_single_laneroll" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qs6ww")
}

[node name="GrassLayer1Only" type="Sprite2D" parent="."]
position = Vector2(703, -14)
texture = ExtResource("3_qfl0h")
metadata/_edit_lock_ = true

[node name="Control" type="Control" parent="."]
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = -1520.0
offset_top = -515.0
offset_right = 21.0
offset_bottom = 594.0
mouse_filter = 2

[node name="GrassLayer1Only" type="Sprite2D" parent="Control"]
position = Vector2(2233, 503)
texture = ExtResource("3_hrfkn")

[node name="grass_roll" parent="." instance=ExtResource("4_wai44")]
position = Vector2(-13, -167)

[node name="grass_roll2" parent="." instance=ExtResource("4_wai44")]
position = Vector2(-13, -167)
